2005-05-31  Conrad T. Pino  <Conrad@Pino.com>

	* config.h, config.h.in, stamp-chi: Regenerated on Solaris for updates
	to config.h.in.footer and config.h.in.in committed on Windows.

2005-05-31  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.in: Change macros (gid_t,pid_t,uid_t) to #undef.
	* pwd.c, pwd.h: Prototypes now (gid_t,uid_t) instead of "int".
	* pwd.c: Stop useing "root:root" for "uid:gid" values.
	* unistd.h: Use "windows-NT/sys/types.h" for definitions.

2005-05-31  Conrad T. Pino  <Conrad@Pino.com>

	* unistd.c, unistd.c: Add new "usleep" function using "my_usleep"
	  logic taken from "woe32.c" file.
	* woe32.c, woe32.h: Add new (woe32_home_dir,woe32_shell) functions.
	* woe32.c: Modify "woe32_nanosleep" to use "unistd.h" "usleep".
	* filesubr.c: Modify "get_homedir" to use "woe32_home_dir".
	* pwd.c: Modify "getpwuid" to use "woe32_home_dir" & "woe32_shell".
	  Append "USERNAME" to "login_strings" array.


2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* woe32.c, woe32.h: Move functions into alpabetical order.

2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* woe32.c: Remove function (getpass,getpid,sleep) implementations.
	* unistd.c: Add function (getpass,getpid,sleep) implementations.

2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* config.h, config.h.in, stamp-chi: Regenerated on Solaris for updates
	to config.h.in.footer and config.h.in.in committed on Windows.

2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* woe32.h: Create header file with ANSI style function prototypes.
	* woe32.c: Use "woe32.h" header and ANSI style function prototypes.
	  Use minimal #include file set (#include "cvs.h" dropped).  Rename:
		function "init_winsock" to "woe32_init_winsock"
		function "wnt_cleanup" to "woe32_cleanup"
		function "nanosleep" to "woe32_nanosleep"
		function "win32getlogin" to "woe32_getlogin"
	  Change function "sleep" return type to "unsigned int" was "unsigned".
	* unistd.h: Move function (getpass,getpid,sleep) prototypes here.