@@ -400,10 +400,6 @@
 /* Define if you have the 'long long' type. */
 #undef HAVE_LONG_LONG
 
-/* Define to 1 if `lstat' has the bug that it succeeds when given the
-   zero-length file name argument. */
-#undef HAVE_LSTAT_EMPTY_STRING_BUG
-
 /* Define to 1 if your system has a GNU libc compatible `malloc' function, and
    to 0 otherwise. */
 #define HAVE_MALLOC 1
@@ -565,10 +561,6 @@
 
 /* Define to 1 if you have the `snprintf' function. */
 #undef HAVE_SNPRINTF
-
-/* Define to 1 if `stat' has the bug that it succeeds when given the
-   zero-length file name argument. */
-#undef HAVE_STAT_EMPTY_STRING_BUG
 
 /* Define to 1 if stdbool.h conforms to C99. */
 #undef HAVE_STDBOOL_H
@@ -1136,9 +1128,6 @@
 /* Define to rpl_localtime if the replacement function should be used. */
 #undef localtime
 
-/* Define to a substitute for the `lstat' function. */
-#define lstat stat
-
 /* Define to rpl_malloc if the replacement function should be used. */
 #undef malloc
 
@@ -1187,9 +1176,6 @@
 
 /* Define as a signed type of the same size as size_t. */
 #define ssize_t int
-
-/* Define to a substitute for the stat function. */
-#define stat wnt_stat
 
 /* Define to rpl_tzset if the wrapper function should be used. */
 #undef tzset
