@@ -1,3 +1,9 @@
+2005-06-10  Derek Price  <derek@ximbiot.com>
+
+	* config.h.in.in: Remove HAVE_LSTAT_EMPTY_STRING_BUG,
+	HAVE_STAT_EMPTY_STRING_BUG, stat, and lstat definitions.
+	* config.h.in.footer: Add stat & lstat definitions.
+
 2005-05-31  Conrad T. Pino  <Conrad@Pino.com>
 
 	* config.h, config.h.in, stamp-chi: Regenerated on Solaris for updates
